# advanced_algorithms

./: README.md
BackTracking/: .gitignore  CMakeLists.txt
BackTracking/apps/: CMakeLists.txt
BackTracking/src/: CMakeLists.txt  backtracker.h  subsetbacktracker.cpp  subsetbacktracker.h
ComputationalGeometry/: .gitignore  CMakeLists.txt  point_test.cpp  segment_test.cpp
ComputationalGeometry/include/: computation_geometry.h
ComputationalGeometry/src/: convexhull.cpp  intersectinglines.cpp  point.h  segment.h
